--- a/argon2/Cargo.toml
+++ b/argon2/Cargo.toml
@@ -20,7 +20,8 @@ base64ct = "1"
 blake2 = { version = "0.10.6", default-features = false }
 
 # optional dependencies
-password-hash = { version = "0.5", optional = true }
+# password-hash = { version = "0.5", optional = true }
+password-hash = { path = "../../traits/password-hash", optional = true }
 zeroize = { version = "1", default-features = false, optional = true }
 
 [target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
@@ -28,7 +29,10 @@ cpufeatures = "0.2.9"
 
 [dev-dependencies]
 hex-literal = "0.4"
-password-hash = { version = "0.5", features = ["rand_core"] }
+password-hash = { path = "../../traits/password-hash", features = [
+    "rand_core",
+] }
+# password-hash = { version = "0.5", features = ["rand_core"] }
 
 [features]
 default = ["alloc", "password-hash", "rand"]
