--- a/pbkdf2/Cargo.toml
+++ b/pbkdf2/Cargo.toml
@@ -17,7 +17,10 @@ digest = { version = "0.10.7", features = ["mac"] }
 
 # optional dependencies
 rayon = { version = "1.7", optional = true }
-password-hash = { version = "0.5", default-features = false, optional = true, features = ["rand_core"]  }
+# password-hash = { version = "0.5", default-features = false, optional = true, features = ["rand_core"]  }
+password-hash = { path = "../../traits/password-hash", default-features = false, optional = true, features = [
+    "rand_core",
+] }
 hmac = { version = "0.12", default-features = false, optional = true }
 sha1 = { version = "0.10", default-features = false, optional = true }
 sha2 = { version = "0.10", default-features = false, optional = true }
